# commuter-app

./: .gitignore  README.md
.github/workflows/: backend.yml
backend/: README.md  pyproject.toml
backend/src/app/: departures.py  feed_info.py  main.py  stops.py  timetable.py
backend/src/app/gtfs/: loader.py  models.py  service_calendar.py  stop_times.py
backend/tests/: test_departures_endpoint.py  test_feed_info_endpoint.py  test_loader.py  test_service_calendar.py  test_stop_times.py  test_stops_endpoint.py  test_timetable.py
backend/tests/mock_data/mock_gtfs/: calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
commuter/commuter/: commuterApp.swift
commuter/commuter.xcodeproj/: project.pbxproj
commuter/commuter/Cache/: CacheEntry.swift  CachePolicy.swift  CacheServicing.swift  Cacheable.swift  CachedDepartures.swift  DiskCache.swift  MemoryCache.swift  TieredCache.swift
commuter/commuter/Models/: Departure.swift  ModelProtocols.swift  Station.swift
commuter/commuter/Navigation/: DestinationContent.swift  Screen.swift
commuter/commuter/Networking/: JSONDecoder+API.swift  NetworkClient.swift
commuter/commuter/Persistence/: FavoriteStop.swift
commuter/commuter/Services/: DataSource.swift  DepartureService.swift  (+5 more)
commuter/commuterTests/: DepartureMappingTests.swift  DepartureServiceTests.swift  DiskCacheTests.swift  FavoriteStopTests.swift  MemoryCacheTests.swift  StationMappingTests.swift  StopServiceTests.swift
commuter/commuterUITests/: commuterUITests.swift  commuterUITestsLaunchTests.swift
(+13 files in other folders)
